# vtivrt

./: LICENSE  Makefile  README.rst  pylintrc  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py  index.rst
examples/: read.py  test.py  thread.py
src/vtivrt/: __init__.py  constants.py  packet.py  reader.py
