[metadata]
name = vtivrt
version = attr: vtivrt.__version__
author = James Jurack
author_email = james.jurack@ametek.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
python_requires = !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
install_requires = requests

[options.packages.find]
where = src
